[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/tilemap 64x32.png" type="Texture" id=1]
[ext_resource path="res://assets/dialog_box.png" type="Texture" id=2]
[ext_resource path="res://src/Objects/TargetTile.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.5, 4.5 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DialogBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, -16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DialogBox:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DialogBox:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "hide"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("DialogBox:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 4.14106, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.05, 0.05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DialogBox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DialogBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 2.37841, 1, 0.517632 ),
"update": 0,
"values": [ Vector2( 7, -14 ), Vector2( 7, -16 ), Vector2( 7, -14 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("DialogBox:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 4.14106 ),
"update": 0,
"values": [ Vector2( 0.05, 0.05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DialogBox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="TargetTile" type="Area2D"]
collision_layer = 8
script = ExtResource( 3 )

[node name="Tilemap64X32" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
frame = 2

[node name="DialogBox" type="Sprite" parent="."]
position = Vector2( 7, -16 )
z_index = 5
z_as_relative = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/hide = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/show = SubResource( 4 )

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
